[tool.poetry]
name = "utunes"
version = "0.1.0"
description = ""
authors = ["Radon Rosborough <radon.neon@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
mutagen = "^1.45.1"
tabulate = "^0.8.9"
requests = "^2.32.4"
filetype = "^1.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
